Bug 1314552. Part 1 - update mMediaSeekableOnlyInBufferedRanges in OnMetadataRead(). r=jya

MozReview-Commit-ID: DPlD6zrJTrx